# sentry_robot_description

./: CMakeLists.txt  README.md  package.xml
launch/: robot_description_launch.py
resource/models/rm21_armor_module/: model.sdf  rm21_armor_module.def.xmacro
resource/models/rm25_example_robot/: model.config  model.sdf  model.sdf.xmacro  rm25_example_robot.def.xmacro
resource/models/rmua19_standard_robot/: chassis_wheel.def.xmacro  model.sdf  rmua19_standard_robot.def.xmacro
resource/xmacro/: potential2026_sentry.sdf.xmacro
